kubernetes/app/sampleWebService.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: podinfo-deployment
  labels:
    app: podinfo-deployment
spec:
  selector:
    matchLabels:
      app: podinfo
  replicas: 1
  template:
    metadata:
      labels:
        app: podinfo
    spec:
      containers:
      - name: podinfo
        image: stefanprodan/podinfo
        ports:
        - containerPort: 9898
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 100m

---
### nlb
# apiVersion: v1
# kind: Service
# metadata:
#   name: podinfo-service
#   annotations:
#     service.beta.kubernetes.io/aws-load-balancer-type: external 
#     service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
# spec:
#   selector:
#     app: podinfo
#   ports:
#     - port: 80
#       targetPort: 80
#       name: http
#   type: LoadBalancer

### alb

apiVersion: v1
kind: Service
metadata:
  name: podinfo-service
  annotations:
    prometheus.io/scrape: "true"
spec:
  ports:
    - name: web
      port: 80
      targetPort: 9898
      protocol: TCP
  type: NodePort
  selector:
    app: podinfo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo-ingress
  labels:
    app: podinfo-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: podinfo-service
              port:
                number: 80
